compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/extensionFunctionAndNormalFunction.kt
// !DIAGNOSTICS: -UNUSED_PARAMETER

class C {
    <!CONFLICTING_PLATFORM_DECLARATIONS!>fun foo(x: Any)<!> {}
    <!CONFLICTING_PLATFORM_DECLARATIONS!>fun Any.foo()<!> {}
}
